[package]
name = "clenv"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
base64 = "0.21"
thiserror = "1.0"
dirs = "6.0.0"
configparser = "3.1.0"
clap = {version="4.5.40", features=["derive","cargo"]}
rocksdb = "0.23.0"
colored = "3.0.0"
